--- a/HealthcareMonitoringIndividuals.html
+++ b/HealthcareMonitoringIndividuals.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Healthcare Monitoring – Individuals (Human Readable)</h1>
+<h1>Healthcare Monitoring – Individuals</h1>
 
 <h2>Alice</h2>
 <ul>
